--- a/index.hbs
+++ b/index.hbs
@@ -18,7 +18,7 @@
   <meta name="viewport" content="width=device-width">
 
   <meta property="og:title" content="{{Title}} - {{EventBoothNumber}} - {{CircleName}}" />
-  <meta property="og:type" content="website" /> {{#if MainImageImage}}
+  <meta property="og:type" content="website" /> {{#if MainImage}}
   <meta property="og:image" content="{{MainImage}}" /> {{/if}}
   <meta property="og:site_name" content="{{Title}} - {{CircleName}}" />
   <meta property="og:description" content="{{MetaDescription}}">
