--- a/index.hbs
+++ b/index.hbs
@@ -210,7 +210,7 @@
         <ul class="social-buttons">
           {{#if EnableTweetButton}}
           <li class="social-button">
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{BlogURL}}">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-hashtags="{{Hashtag}}" data-url="{{BlogURL}}">Tweet</a>
             <script>
               ! function(d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0],
