--- a/index.hbs
+++ b/index.hbs
@@ -48,6 +48,8 @@
     })();
   </script>
 
+  <script src="http://jsoon.digitiminimi.com/js/widgetoon.js"></script>
+
   <style>
     .list .author {
       color: #9da3af;
