--- a/index.hbs
+++ b/index.hbs
@@ -206,7 +206,7 @@
         <ul class="social-buttons">
           {{#if EnableTweetButton}}
           <li class="social-button">
-            <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-count="horizontal" data-hashtags="{{Hashtag}}" data-url="{{BlogURL}}">Tweet</a>
+            <a href="https://twitter.com/share" class="twitter-share-button twitter-share-buttoon" data-count="horizontal" data-hashtags="{{Hashtag}}" data-text="{{CircleName}} - {{EventBoothNumber}} - {{Title}}" data-url="{{BlogURL}}">Tweet</a>
           </li>
           {{/if}} {{#if EnableFacebookButton}}
           <li class="social-button">
