Fix ul padding and margin

--- a/index.hbs
+++ b/index.hbs
@@ -57,8 +57,10 @@
     .list .website {
       margin-top: 5px;
     }
-    .store-list {
+    ul.store-list {
       list-style-type: none;
+      padding: 0;
+      margin: 0;
     }
     .store-list img {
       height: 3em;
