Add Twitter Card

--- a/index.hbs
+++ b/index.hbs
@@ -20,8 +20,14 @@
   <meta property="og:title" content="{{Title}} - {{EventBoothNumber}} - {{CircleName}}" />
   <meta property="og:type" content="website" /> {{#if MainImage}}
   <meta property="og:image" content="{{MainImage}}" /> {{/if}}
-  <meta property="og:site_name" content="{{Title}} - {{CircleName}}" />
+  <meta property="og:site_name" content="{{Title}} - {{EventBoothNumber}} - {{CircleName}}" />
   <meta property="og:description" content="{{MetaDescription}}">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="{{TwitterID}}">
+  <meta name="twitter:title" content="{{Title}} - {{EventBoothNumber}} - {{CircleName}}">
+  <meta name="twitter:description" content="{{MetaDescription}}">
+  <meta name="twitter:image:src" content="{{JacketImage}}">
 
   <link rel="stylesheet" href="//sanographix.github.io/public/tumblr/tokusetsu2/css/style.css" />
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,300italic' rel='stylesheet' type='text/css'>
