--- a/index.pug
+++ b/index.pug
@@ -24,10 +24,12 @@ html
     link(rel="stylesheet", href="//npmcdn.com/semantic-ui-css@2.1.8/semantic.min.css")
       
     script.
-      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-71704333-1', 'auto');
       ga('send', 'pageview');
-    script(async, src="//www.google-analytics.com/analytics.js")
   body
     .ui.middle.aligned.center.aligned.padded.grid(style="height: 100%;")
       .column
