--- a/index.pug
+++ b/index.pug
@@ -33,8 +33,11 @@ html
   body
     .ui.middle.aligned.center.aligned.padded.grid(style="height: 100%;")
       .column
-        h1 O'Creilly
-        p 技術書典 A-13
+        h1
+          img.ui.centered.medium.image(alt="O'Creilly", src="assets/ocreilly.svg")
+        p
+          a(href="https://techbookfest.org/#A-13", target="_blank")
+            img.ui.centered.small.image(alt="技術書典 A-13", src="assets/techbook_no.svg")
         p
           a.ui.button(href="/C89")
             | Comiket 89
