Change button color

--- a/index.pug
+++ b/index.pug
@@ -41,5 +41,5 @@ html
         p
           a.ui.button(href="/C89")
             | Comiket 89
-          a.ui.button(href="/TechBookFest2016")
+          a.ui.green.button(href="/TechBookFest2016")
             | TechBookFest 2016
